--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+  <groupId>dev.tuxjsql</groupId>
+  <artifactId>mysql</artifactId>
+  <version>2.1</version>
+</dependency>
+<dependency>
+  <groupId>de.pentabyte</groupId>
+  <artifactId>springfox-enum-plugin</artifactId>
+  <version>3.0.0</version>
+</dependency>
   </dependencies>
 
   <build>
